[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["kukupy3nik <62823093+kukupy3nik@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
pydantic = "^2.7.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
jupyter = "^1.0.0"

[tool.poetry.scripts]
start = "app.main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
